@@ -485,6 +485,12 @@
 # Default is an empty string (current directory).
 # Set to e.g. /var/lib/mosquitto if running as a proper service on Linux or
 # similar.
+#
+# Can also be defined by setting the MOSQUITTO_PERSISTENCE_LOCATION environment
+# variable prior to running the broker. If both the config file option and the
+# environment variable are set, the environment variable takes precedent.
+#
+# This can also be used by plugins using the mosquitto_persistence_location() function.
 #persistence_location
 
 
